# selenium_learning

./: docker-compose.yml  dockerfile  pyproject.toml
src/: celery_app.py  main.py
src/apps/panel/: email_storage.py  forms.py  mixins.py  models.py  tasks.py  tests.py  urls.py  views.py
src/apps/panel/management/commands/: clear_cache.py
src/apps/panel/migrations/: 0001_initial.py  0002_remove_article_image_article_href_article_src.py  0003_alter_article_href_alter_article_src_and_more.py  0004_remove_article_title.py  0005_woman.py  0006_alter_woman_photo.py  0007_woman_url_alter_woman_photo.py  0008_woman_woman_url_is_not_null_index.py
src/apps/panel/static/css/: base.css
src/apps/panel/templates/: articles.html  base.html  loading_icon.html  panel.html  women.html
src/apps/panel/templates/js/: base_infinity_pagination.html  consts.html  event_loop.html  infinity_pagination.html  my_infinity_pagination.html  state_post.html
src/apps/panel/templates/pages/: my_panel.html  panel.html
src/apps/parser/: application.py  container.py  domain.py  infrastructure.py
src/apps/parser/features/: auth.py  get_elemens.py  list.py
src/config/: __init__.py  urls.py
src/config/settings/: base.py  logging.py  redis.py
src/parser/: application.py
src/parser/tests/: test_parser.py
src/utils/: __init__.py  mixin_for.py
